# openfork

./: .gitignore  Cargo.toml  Dockerfile  README.md  TODO.md  docker-compose.yml  openfork.example.toml
apps/messaging/: Cargo.toml
apps/messaging/migrations/: 0003_create_messaging.sql
apps/messaging/src/: lib.rs  models.rs  state.rs  websocket.rs
apps/messaging/src/handlers/: dm.rs  mod.rs  reactions.rs  search.rs
apps/project-tracking/: Cargo.toml
apps/project-tracking/src/: lib.rs  models.rs  state.rs
apps/project-tracking/src/handlers/: assignees.rs  comments.rs  issues.rs  labels.rs  mod.rs
core/: Cargo.toml
core/src/: config.rs  lib.rs
core/src/app/: context.rs  mod.rs  registry.rs  traits.rs
core/src/auth/: handlers.rs  jwt.rs  middleware.rs  mod.rs  models.rs  password.rs
core/src/events/: bus.rs  mod.rs
core/src/module/: context.rs  mod.rs  registry.rs  traits.rs
core/src/storage/: factory.rs  mod.rs  traits.rs
core/src/workspace/: handlers.rs  mod.rs  models.rs
docs/: modules.md
docs/plans/: 2026-03-20-openfork-design.md  2026-03-20-openfork-implementation.md  2026-03-21-workspace-promotion.md  2026-03-23-issue-tracking-enhancements.md  2026-03-23-messaging-slack-layout.md
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: auth.ts  client.ts  messaging.ts  projects.ts  workspaces.ts
frontend/src/components/auth/: LoginPage.tsx  RegisterPage.tsx
frontend/src/components/layout/: AppShell.tsx  Sidebar.tsx  TopBar.tsx
frontend/src/components/messaging/: ChannelDetailPage.tsx  ChannelsPage.tsx  DmDetailPage.tsx  DmListPage.tsx  MessageBubble.tsx  MessageInput.tsx  MessagingLayout.tsx  ReactionBar.tsx  ThreadPanel.tsx
frontend/src/components/projects/: CommentItem.tsx  IssueDetailPage.tsx  IssueRow.tsx  KanbanBoard.tsx  ProjectCard.tsx  ProjectDetailPage.tsx  ProjectsPage.tsx
frontend/src/components/ui/: Avatar.tsx  Badge.tsx  Button.tsx  EmptyState.tsx  ErrorBoundary.tsx  Input.tsx  MemberPicker.tsx  Modal.tsx  Select.tsx  Spinner.tsx
frontend/src/components/workspace/: CreateWorkspacePage.tsx  JoinWorkspacePage.tsx  WorkspaceLayout.tsx  WorkspaceSelectPage.tsx  WorkspaceSettingsPage.tsx
frontend/src/hooks/: useAuth.ts  useWebSocket.ts
frontend/src/stores/: auth.ts  workspace.ts
migrations/: 0001_create_users.sql  0002_create_project_tracking.sql  0004_workspace_members.sql  0005_add_workspace_id_to_channels.sql  0006_workspace_invites.sql  0007_seed_sandbox.sql  0008_channel_slug_per_workspace.sql  0009_seed_full.sql  0010_issue_enhancements.sql  0011_multi_assignees.sql  0011_user_profile_fields.sql  0012_fix_seed_handles.sql  0013_deduplicate_dm_groups.sql  0014_deduplicate_dm_groups_v2.sql
modules/messaging/: Cargo.toml
modules/messaging/src/: lib.rs  models.rs  state.rs  websocket.rs
modules/messaging/src/handlers/: channels.rs  dm.rs  messages.rs  search.rs
modules/project-tracking/: Cargo.toml
modules/project-tracking/src/: lib.rs  models.rs  state.rs
modules/project-tracking/src/handlers/: issues.rs  mod.rs  projects.rs  workspaces.rs
proto/: Cargo.toml  build.rs
seeds/: sandbox.yaml  zero.yaml
server/: Cargo.toml
server/src/: main.rs
server/tests/: auth_test.rs  messaging_test.rs  project_tracking_test.rs
server/tests/common/: mod.rs
shared/: Cargo.toml
shared/src/: error.rs  lib.rs  types.rs
