[workspace]
members = [
    "shared",
    "core",
    "proto",
    "modules/project-tracking",
    "modules/messaging",
    "server",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0"

[workspace.dependencies]
# Async
tokio = { version = "1", features = ["full"] }

# Web
axum = { version = "0.8", features = ["ws"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# gRPC
tonic = "0.13"
prost = "0.13"
prost-types = "0.13"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "uuid", "chrono", "json", "migrate"] }

# Redis
fred = { version = "10", features = ["subscriber-client"] }

# Auth
jsonwebtoken = "9"
argon2 = "0.5"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Types
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Config
toml = "0.8"

# Testing
testcontainers = "0.23"

# Workspace crates
openfork-shared = { path = "shared" }
openfork-core = { path = "core" }
openfork-proto = { path = "proto" }
openfork-mod-project-tracking = { path = "modules/project-tracking" }
openfork-mod-messaging = { path = "modules/messaging" }
