[package]
name = "openfork-server"
version.workspace = true
edition.workspace = true

[dependencies]
openfork-shared = { workspace = true }
openfork-core = { workspace = true }
openfork-proto = { workspace = true }
openfork-app-project-tracking = { workspace = true }
openfork-app-messaging = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
axum = { workspace = true }
sqlx = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
testcontainers = { workspace = true }
reqwest = { version = "0.12", features = ["json"] }
serde = { workspace = true }
