[package]
name = "openfork-mod-messaging"
version.workspace = true
edition.workspace = true

[dependencies]
openfork-shared = { workspace = true }
openfork-core = { workspace = true }
openfork-proto = { workspace = true }
axum = { workspace = true }
sqlx = { workspace = true }
fred = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tonic = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
